# skinnygrad

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yaml
autodiff/: Makefile  README.md  pyproject.toml
autodiff/extensions/logger/: README.md  pyproject.toml
autodiff/extensions/logger/src/logging_callback/: __init__.py  logging_callback.py
autodiff/extensions/visualizer/: README.md  pyproject.toml
autodiff/extensions/visualizer/formatting/: base.json  datanode.json  graph.json
autodiff/extensions/visualizer/src/visualization/: formatting.py  graph_visualizer.py
autodiff/src/autodiff/: __init__.py  autograd.py  callbacks.py  config.py  core.py  graph.py  llops.py  runtime.py  tensors.py
autodiff/src/autodiff/engines/: README.md  exceptions.py
autodiff/src/autodiff/engines/packaged_engines/: base.py  numpy_engine.py
autodiff/tests/: conftest.py  test_backprop.py  test_numpy_engine.py  test_shapes.py  test_tensor_math.py
examples/: le_net.py  matmul.py
extensions/cupy_engine/: README.md  pyproject.toml
extensions/cupy_engine/src/cupy_engine/: __init__.py  cupy_engine.py
extensions/logger/: README.md  pyproject.toml
extensions/logger/src/logging_callback/: __init__.py  logging_callback.py
extensions/visualizer/: README.md  pyproject.toml
extensions/visualizer/formatting/: edge.json
extensions/visualizer/src/visualization/: __init__.py  graph_visualizer.py
extensions/visualizer/src/visualization/formats/: base.json  graph.json  opnode.json
src/barebones_ml/: activations.py  attention.py  feedforward.py
src/skinnygrad/: __init__.py  autograd.py  callbacks.py  config.py  layers.py  llops.py  optimizers.py  runtime.py  shapes.py  tensors.py
tests/: conftest.py  test_backprop.py  test_convergence.py  test_numpy_engine.py  test_shapes.py  test_tensor_math.py
