[tool.poetry]
name = "skinnygrad-logger"
version = "0.1.0"
description = "logger for the skinnygrad package"
authors = ["Arthur <atte.book@gmail.com>"]
readme = "README.md"
packages = [{include = "logging_callback", from = "./src/"}]

[tool.poetry.dependencies]
python = "^3.11"
skinnygrad = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
