[tool.poetry]
name = "tinydiff-logger"
version = "0.1.0"
description = "logger for the tinydiff package"
authors = ["Arthur <atte.book@gmail.com>"]
readme = "README.md"
packages = [{include = "logging_callback", from = "./src/"}]

[tool.poetry.dependencies]
python = "^3.11"
tinydiff = {path = "../.."}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
