[tool.poetry]
name = "tinydiff-visualizer"
version = "0.1.0"
description = "visualizer for the tinydiff package"
authors = ["Arthur <atte.book@gmail.com>"]
readme = "README.md"
packages = [{include = "visualization", from = "./src/"}]

[tool.poetry.dependencies]
python = "^3.11"
tinydiff = {path = "../.."}
graphviz = "^0.20.3"
pygraphviz = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
